tests/snapshots/ui_tests__catppuccin_frappe_theme.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Local Source /test/╮ Remote Destination (╮ Job #1 Details ───────────────────────────────────────────╮
│▌ Transfers    │ Size      Modified │Name                 │SUMMARY                                                    │
│  Quarantine   │ -         -        │                     │Result     : uploading                                     │
│  Logs         │ -         -        │                     │Operation  : Transfer                                      │
│  Settings     │ 1.0 KB    -        │                     │Size       : 9.35 MB                                       │
│               │ 2.0 MB    -        │                     │Avg Rate   : -                                             │
│               │                    │                     │Session    : test-session                                  │
│               │                    │                     │Started    : 2026-01-15T10:30:00+00:00                     │
│               │                    │                     │Finished   : -                                             │
│               │                    │                     │                                                           │
│               │                    │                     │TRANSFER                                                   │
│               │                    │                     │Source     : /uploads/archive.tar.gz                       │
│               │                    │                     │Dest       : /uploads/archive.tar.gz                       │
│               │                    │                     │Source Ep  : -                                             │
│               │                    │                     │Dest Ep    : -                                             │
│               │                    │                     │Upload     : none                                          │
│               │                    │                     │Scan       : clean                                         │
│               │                    │                     │                                                           │
│               ╰────────────────────╯─────────────────────╯POLICY                                                     │
│               │ Queue (Jobs)                             │Conflict   : -                                             │
│               │File             Op Ro Fr To S Si Pr Av ET│Scan Mode  : -                                             │
│               │📄  archive.tar.g Tr -  -  -  u 9. ░░ -  - │Scan Time  : 500ms                                         │
│               │📄  readme.md     Tr -  -  -  c 23 ██ -  - │Retry      : attempt 1                                     │
│               │                                          │                                                           │
│               │                                          │INTEGRITY                                                  │
│               │                                          │Verdict    : Not Available                                 │
│               │                                          │Remote     : Not uploaded                                  │
│               │                                          │Local      : Calculating...                                │
│               │                                          │                                                           │
│               │                                          │ERROR                                                      │
│               │                                          │Message    : none                                          │
│               │                                          │                                                           │
│               │                                          │RECENT EVENTS                                              │
│               │                                          │Events     : none                                          │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
↑/↓ Select  │  p Pause/Resume  │  +/- Pr             ClamAV: Connected  │  S3: Not Configured  │  Jobs: 2  │  Threats: 0
