tests/snapshots/ui_tests__catppuccin_macchiato_theme.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Local /test/path───╮ Remote (S3): 0 [Path╮ Job #1 Details ───────────────────────────────────────────╮
│▌ Transfers    │ Size      Modified │Name                 │Status: uploading                                          │
│  Quarantine   │ -         -        │                     │Path:   /uploads/design.sketch                             │
│  Logs         │ -         -        │                     │Session: test-session                                      │
│  Settings     │ 1.0 KB    -        │                     │Report:  scan_report_test-session.txt                      │
│               │ 2.0 MB    -        │                     │Size:   2.29 MB                                            │
│               │                    │                     │Scan:   clean                                              │
│               │                    │                     │Upload: none                                               │
│               │                    │                     │Scan Time:   500ms                                         │
│               │                    │                     │                                                           │
│               │                    │                     │DATA INTEGRITY (SHA256):                                   │
│               │                    │                     │Local:  Calculating...                                     │
│               │                    │                     │Remote: Not uploaded                                       │
│               │                    │                     │                                                           │
│               │                    │                     │DETAILS / ERRORS:                                          │
│               │                    │                     │none                                                       │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               ╰────────────────────╯─────────────────────╯                                                           │
│               │ Queue (Jobs)                             │                                                           │
│               │File                 Statu Size Progr Time│                                                           │
│               │📄  design.sketch     uploa 2.29 ░░░░░ 2h a│                                                           │
│               │📄  spec.docx         compl 585. █████ 2h a│                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
↑/↓ Select  │  p Pause/Resume  │  +/- Pr             ClamAV: Connected  │  S3: Not Configured  │  Jobs: 2  │  Threats: 0
