tests/snapshots/ui_tests__filter_mode_active.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Local (Filter) /tes╮ Remote (S3): 0 [Path╮ History [All] ────────────────────────────────────────────╮
│▌ Transfers    │ 🔍  Filter: doc █   │Name                 │File                 Status           Size       Time      │
│  Quarantine   │ Size      Modified │                     │                                                           │
│  Logs         │ -         -        │                     │                                                           │
│  Settings     │ -         -        │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               ╰────────────────────╯─────────────────────╯                                                           │
│               │ Queue (Jobs)                             │                                                           │
│               │File                 Statu Size Progr Time│                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
Type to filter  │  ↑/↓ Select  │  Enter              ClamAV: Connected  │  S3: Not Configured  │  Jobs: 0  │  Threats: 0
