tests/snapshots/ui_tests__history_with_items.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Local Source /test/╮ Remote Destination (╮ History [All] ────────────────────────────────────────────╮
│▌ Transfers    │ Size      Modified │Name                 │File                     Result   Route    Size    Duration│
│  Quarantine   │ -         -        │                     │📄  completed_file.zip    Done     -        9.54 MB 500ms   │
│  Logs         │ -         -        │                     │📄  another_upload.tar.gz Done     -        23.84 M 500ms   │
│  Settings     │ 1.0 KB    -        │                     │                                                           │
│               │ 2.0 MB    -        │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │───────────────────────────────────────────────────────────╯
│               │                    │                     │ Job #1 Details                                            │
│               │                    │                     │SUMMARY                                                    │
│               │                    │                     │Result     : complete                                      │
│               ╰────────────────────╯─────────────────────╯Operation  : Transfer                                      │
│               │ Queue (Jobs)                             │Size       : 9.54 MB                                       │
│               │File             Op Ro Fr To S Si Pr Av ET│Avg Rate   : -                                             │
│               │                                          │                                                           │
│               │                                          │TRANSFER                                                   │
│               │                                          │Source     : /uploads/completed_file.zip                   │
│               │                                          │Dest       : /uploads/completed_file.zip                   │
│               │                                          │Upload     : none                                          │
│               │                                          │Scan       : clean                                         │
│               │                                          │                                                           │
│               │                                          │POLICY                                                     │
│               │                                          │Rules      : - / -                                         │
│               │                                          │                                                           │
│               │                                          │INTEGRITY                                                  │
│               │                                          │Verdict    : Not Available                                 │
│               │                                          │Remote     : Not uploaded                                  │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
← Queue  │  Tab Navigate  │  q Quit                  ClamAV: Connected  │  S3: Not Configured  │  Jobs: 0  │  Threats: 0
