tests/snapshots/ui_tests__job_with_error.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Local Source /test/╮ Remote Destination (╮ Job #1 Details ───────────────────────────────────────────╮
│▌ Transfers    │ Size      Modified │Name                 │SUMMARY                                                    │
│  Quarantine   │ -         -        │                     │Result     : failed                                        │
│  Logs         │ -         -        │                     │Operation  : Transfer                                      │
│  Settings     │ 1.0 KB    -        │                     │Size       : 14.31 MB                                      │
│               │ 2.0 MB    -        │                     │Avg Rate   : -                                             │
│               │                    │                     │Session    : test-session                                  │
│               │                    │                     │Started    : 2026-01-15T10:30:00+00:00                     │
│               │                    │                     │Finished   : -                                             │
│               │                    │                     │                                                           │
│               │                    │                     │TRANSFER                                                   │
│               │                    │                     │Source     : /uploads/broken_upload.zip                    │
│               │                    │                     │Dest       : /uploads/broken_upload.zip                    │
│               │                    │                     │Source Ep  : -                                             │
│               │                    │                     │Dest Ep    : -                                             │
│               │                    │                     │Upload     : none                                          │
│               │                    │                     │Scan       : clean                                         │
│               │                    │                     │                                                           │
│               ╰────────────────────╯─────────────────────╯POLICY                                                     │
│               │ Queue (Jobs)                             │Conflict   : -                                             │
│               │File             Op Ro Fr To S Si Pr Av ET│Scan Mode  : -                                             │
│               │📄  broken_upload Tr -  -  -  f 14 !! -  - │Scan Time  : 500ms                                         │
│               │                                          │Retry      : attempt 4                                     │
│               │                                          │                                                           │
│               │                                          │INTEGRITY                                                  │
│               │                                          │Verdict    : Not Available                                 │
│               │                                          │Remote     : Not uploaded                                  │
│               │                                          │Local      : Calculating...                                │
│               │                                          │                                                           │
│               │                                          │ERROR                                                      │
│               │                                          │Message    : Network timeout after 3 retries               │
│               │                                          │                                                           │
│               │                                          │RECENT EVENTS                                              │
│               │                                          │Events     : none                                          │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
↑/↓ Select  │  p Pause/Resume  │  +/- Pr             ClamAV: Connected  │  S3: Not Configured  │  Jobs: 1  │  Threats: 0
